# 0.00.54 (71845) Jan 23, 2013
1/23/13 dev version with change requests from 1 interview and code review
1/23/12 change request: for "Graph the Line" challenges, plot the point if it's not variable
1/23/12 add test harness for generating massive numbers of challenge sets, to verify that nothing fails
1/23/12 #3487 code review: address run==0 in Line.solveX
1/23/12 #3487 code review: factor out a duplicate block of code, reuse in challenge generation for levels 5 & 6
1/23/13 #3487 code review: use Collections.shuffle instead of custom shuffling algorithm (thanks, didn't know about this)
1/18/13 wrote implementation-notes.txt
1/18/13 more detailed doc for RandomChooser
1/18/13 remove flavor test-equation-nodes from build.properties
# 0.00.53 (71794) Jan 18, 2013
1/18/13 use separate image files for point tool body and tip, make tip unpickable so that bounds of point tool doesn't interfere with picking manipulators
# 0.00.52 (71766) Jan 17, 2013
1/17/13 bug fixes in levels 5 & 6
1/17/13 fix: in levels 5 & 6, need to use x1=0 for PTP challenges involving slope-intercept
1/17/13 fix: in level=6, the PTP challenge with point-slope form is erroneously configured for slope-intercept
1/17/13 fix: in level=5, the PTP challenge with point-slope form is erroneously configured for slope-intercept
1/17/13 ran IDEA's Analyze->Inspect Code, addressed issues where it made sense to do so
1/17/13 screenshot
# 0.00.51 (71745) Jan 16, 2013
1/16/13 first feature-complete version for testing
1/16/13 organize imports for all source files
1/16/13 use Graph.lines in game [71728]
1/16/13 add Graph.lines, make the point tool observe it [71724]
1/15/13 cleanup ChallengeFactory subclasses
1/15/13 delete unnecessary zero-arg constructors in ChallengeFactory subclasses
1/15/13 delete obsolete TestFractionSlopes
1/15/13 internal documentation touch-up
1/15/13 mismatch representations for PTP challenges in level=6
1/15/13 save a snapshot of Google design doc and check into SVN